[workspace]
members = ["rlox", "rlox_arena", "rlox_span", "rlox_macros", "rlox_ast"]

[workspace.package]
authors = ["Yangchen <eikasia30@gmail.com>"]
description = "My implementation of crafting-intepreters project in rust"
edition = "2021"
keywords = ["interpreter"]
license = "Apache-2.0"
repository = "https://github.com/YangchenYe323/crafting-interpreter"

[workspace.dependencies]
clap = { version = "4.2.2", features = ["derive"] }
miette = { version = "5.7.0", features = ["fancy"] }
thiserror = "1.0.40"
rustc-hash = "1.1.0"
rustyline = "11.0.0"
indextree = "4.6.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
bitflags = "2.2.1"
assert_cmd = "0.11"
insta = "1.29.0"

rlox = { version = "0.1.0", path = "rlox" }
rlox_arena = { version = "0.1.0", path = "rlox_arena" }
rlox_span = { version = "0.1.0", path = "rlox_span" }
rlox_macros = { version = "0.1.0", path = "rlox_macros" }
rlox_ast = { version = "0.1.0", path = "rlox_ast" }
