[package]
name = "rlox"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
rustyline = { workspace = true }
indextree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitflags = { workspace = true }

rlox_span = { workspace = true }

colored = "2"

[dev-dependencies]
assert_cmd = { workspace = true }
