[package]
name = "rlox_ast"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indextree = { workspace = true }
serde = { workspace = true }

rlox_span = { workspace = true }
