[package]
name = "rlox-bin"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
rustyline = "11.0.0"
colored = "2"
miette = { workspace = true }

rlox = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
rlox_macros = { workspace = true }
