[package]
name = "rlox_macros"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
syn = "2.0.15"
quote = "1.0.26"