[package]
name = "rlox_span"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
rlox_arena = { workspace = true }
